<resources>
    <string name="app_name">Android Tic-Tac-Toe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_human">You got first</string>
    <string name="turn_human">Your turn</string>
    <string name="turn_computer">Android\s turn</string>
    <string name="result_tie">It\s a tie</string>
    <string name="result_human_win">You won!</string>
    <string name="result_computer_win">Android won!</string>
    <string name="first_turn_human">You got First</string>
    <string name="first_turn_android">Android moved first</string>
    <string name="score_human_label">Human:</string>
    <string name="score_android_label">Android:</string>
    <string name="score_board_label">Board</string>
    <string name="score_ties_label">Ties:</string>
    <string name="score_human">0</string>
    <string name="score_android">0</string>
    <string name="score_ties">0</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_ai_difficulty">Difficulty</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_restart_score">Restart Score</string>
    <string name="about">Tic Tac Toe By Alejandro Velasco</string>
    <string name="instructions">Choose from one of three difficulty levels. Dont let the Android beat you</string>
    <string name="about_label">About</string>
    <string name="difficulty_expert">Expert</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_easy">Easy</string>
    <string name="settings">Settings</string>
</resources>
